--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html {
   left: 50%;
   padding: 10px 20px;
   width: 320px;
-  height: 100%;
+  height: 600px;
   transform: translate(-50%, -50%);
   border: 10px solid white;
   border-radius: 30px;
